# Kleos

./: .codex  .dockerignore  .env.example  .gitignore  .woodpecker.yml  0.9  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  PLAN.md  README.md  SECURITY.md  WORKTREE-SPEC.md  _gen_memory.py  clippy_output.txt  compose.yaml  deny.toml  flake.nix  rust-toolchain.toml  test.py  write_files.py
agent-forge/: Cargo.toml
agent-forge/src/: db.rs  json_io.rs  kleos_client.rs  lib.rs  main.rs  mcp.rs
agent-forge/src/emit/: gatekeeper.rs  mod.rs  model.rs  paths.rs  render.rs  trust.rs
agent-forge/src/tools/: approaches.rs  comments.rs  emit.rs  hypothesis.rs  mod.rs  session.rs  skills.rs  spec.rs  stats.rs  think.rs  verify.rs
agent-forge/src/treesitter/: mod.rs  parser.rs
eidolon-supervisor/: Cargo.toml
eidolon-supervisor/src/: alert.rs  main.rs  watch.rs
eidolon-supervisor/src/checks/: drift.rs  mod.rs  retry_loop.rs  rule_match.rs  scope.rs
engram-approval-tui/: Cargo.toml
engram-approval-tui/src/: main.rs
engram-cli/: Cargo.toml
engram-cli/src/: main.rs
engram-cred/: Cargo.toml
engram-cred/src/: agent_keys.rs  audit.rs  crypto.rs  lib.rs  recovery.rs  storage.rs  types.rs  yubikey.rs
engram-credd/: Cargo.toml
engram-credd/src/: auth.rs  lib.rs  main.rs  server.rs  state.rs
engram-credd/src/handlers/: agents.rs  mod.rs  resolve.rs  secrets.rs  types.rs
engram-credd/tests/: integration.rs
engram-lib/: Cargo.toml
engram-lib/examples/: db_benchmark.rs  pagerank_benchmark.rs
engram-lib/src/: activity.rs  agents.rs  apikeys.rs  artifacts.rs  audit.rs  auth.rs  config.rs  conversations.rs  encryption.rs  episodes.rs  facts.rs  gate.rs  guard.rs  inbox.rs  lib.rs  pack.rs  pagination.rs  personality.rs  preferences.rs  projects.rs  prompts.rs  quota.rs  ratelimit.rs  resilience.rs  scratchpad.rs  sessions.rs  sync.rs  validation.rs  webhooks.rs
engram-mcp/: Cargo.toml
engram-mcp/src/: auth.rs  lib.rs  main.rs  tools.rs
engram-mcp/tests/: integration.rs
engram-migrate/: Cargo.toml
engram-migrate/src/: main.rs  source.rs  tables.rs  target.rs  validate.rs  vectors.rs
engram-server/: Cargo.toml
engram-server/src/: background.rs  brain_absorber.rs  envelope.rs  error.rs  extractors.rs  lib.rs  main.rs  server.rs  state.rs
engram-server/tests/: api_parity.rs  query_plans.rs  routes_search.rs
engram-sidecar/: Cargo.toml
engram-sidecar/src/: auth.rs  config.rs  main.rs  routes.rs  scoring.rs  session.rs  store.rs  watcher.rs
forge/: Cargo.toml
forge/src/: client.rs  dispatch.rs  error.rs  exec.rs  main.rs  output.rs
kleos-approval-tui/: Cargo.toml
kleos-approval-tui/src/: main.rs
kleos-cli/: Cargo.toml
kleos-cli/src/: hook.rs  import_plugins.rs  main.rs
kleos-client/: Cargo.toml
kleos-client/src/: client.rs  lib.rs  routes.rs
kleos-config/: Cargo.toml
kleos-config/src/: config.rs  lib.rs
kleos-credd/: Cargo.toml  MANUAL.md
kleos-credd/src/: auth.rs  bootstrap.rs  lib.rs  listener.rs  main.rs  peercred.rs  server.rs  state.rs
kleos-credd/tests/: integration.rs  peercred_socket_test.rs
kleos-fs/: Cargo.toml
kleos-fs/src/: main.rs  observe.rs
kleos-ingest/: Cargo.toml
kleos-ingest/src/: config.rs  extractor.rs  ledger.rs  main.rs  one_shot.rs  summarizer.rs  tailer.rs  watcher.rs  writer.rs
kleos-install/: Cargo.toml
kleos-install-core/: Cargo.toml
kleos-install-core/src/: components.rs  config.rs  download.rs  error.rs  lib.rs  plan.rs  platform.rs  security.rs  system.rs  upgrade.rs
kleos-install-gui/: Cargo.toml
kleos-install-gui/src/: main.rs  theme.rs  wizard.rs
kleos-install/src/: main.rs  noninteractive.rs  tui.rs  types.rs  wizard.rs
kleos-lib/: Cargo.toml
kleos-lib/benches/: auth_middleware.rs  criterion_percentiles.py  embeddings.rs  graph_traversal.rs  memory_search.rs  pitr_collect.rs
kleos-lib/examples/: db_benchmark.rs  onnx_probe.rs  pagerank_benchmark.rs
kleos-lib/lexicon/: de.toml  en.toml  fr.toml
kleos-lib/prompts/: .gitattributes
kleos-lib/src/: activity.rs  agents.rs  artifacts.rs  artifacts_crypto.rs  attention.rs  audit.rs  auth.rs  auth_piv.rs  config.rs  conversations.rs  encryption.rs  env.rs  episodes.rs  facts.rs  gate.rs  guard.rs  inbox.rs  intelligenceextraction.rs  lang.rs  lib.rs  mcp_token.rs  net.rs  observability.rs  pack.rs  personality.rs  preferences.rs  projects.rs  prompts.rs  quota.rs  ratelimit.rs  scratchpad.rs  sessions.rs  spaces.rs  sync.rs  validation.rs  webhooks.rs
kleos-lib/tests/: abstain_calibration.rs  admin_export_isolation.rs  artifacts_fts.rs  attention_isolation.rs  consolidation_semantics.rs  context_review_gate.rs  entity_extraction.rs  http_reranker_blend.rs  inbox_isolation.rs  intelligence_isolation.rs  intelligence_scope_h.rs  l5_channels.rs  lang_retrieval.rs  link_similarity.rs  memory_versioning.rs  mutation_idor.rs  openai_embedding_order.rs  personality_isolation.rs  quota_integration.rs  read_isolation_a1.rs  recall_tiers.rs  retrieval_eval.rs  review_gate_search.rs  review_gate_store_pending.rs  review_gate_surfaces.rs  shared_mode_scoping.rs  single_db_isolation.rs  skills_scope_h.rs  store_dedup.rs  teardown_monolith.rs  tenant_isolation.rs  tenant_single_flight.rs  tz_default_migration.rs
kleos-mcp/: Cargo.toml
kleos-mcp/src/: auth.rs  lib.rs  main.rs  tools.rs
kleos-mcp/tests/: integration.rs
kleos-migrate/: Cargo.toml
kleos-migrate/src/: handoffs.rs  main.rs  source.rs  tables.rs  target.rs  validate.rs  vectors.rs
kleos-migrate/tests/: sqlcipher_smoke.rs
kleos-phylax/: Cargo.toml
kleos-phylax-ssh-agent/: Cargo.toml
kleos-phylax-ssh-agent/src/: handler.rs  lib.rs  provider.rs  server.rs  wire.rs
kleos-phylax-ssh-agentd/: Cargo.toml
kleos-phylax-ssh-agentd/src/: http_provider.rs  main.rs
kleos-phylax/src/: approval_token.rs  audit.rs  lib.rs  middleware.rs  migrate.rs  notify.rs  router.rs  ssh_ca_signer.rs  state.rs
kleos-phylax/tests/: integration.rs  kleos_token_test.rs  ssh_sign_test.rs
kleos-phylaxd/: Cargo.toml
kleos-phylaxd/src/: main.rs
(+1115 files in other folders)
