[workspace]
resolver = "2"
members = ["engram-lib", "engram-server", "engram-cli", "engram-sidecar", "engram-approval-tui", "engram-mcp", "engram-cred", "engram-credd", "agent-forge", "engram-migrate"]

[workspace.dependencies]
libsql = "0.6"
rusqlite = "0.31"
tokio-rusqlite = "0.5"
deadpool-sqlite = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "set-header"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
hmac = "0.12"
sha2 = "0.10"
subtle = "2.5"
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }
tokenizers = "0.22"
ndarray = "0.16"
dirs = "6"
regex = "1"
url = "2"
zip = "2"
pdf-extract = "0.7"
rand = "0.8"
async-trait = "0.1"
arrow-array = "56"
arrow-schema = "56"
futures = "0.3"
lancedb = { version = "0.23", default-features = false }
protoc-bin-vendored-linux-x86_64 = "3"
flate2 = "1"
hex = "0.4.3"
secrecy = { version = "0.8", features = ["serde"] }
zeroize = { version = "1", features = ["zeroize_derive"] }
# Note: Can't use bundled sqlite with libsql in same binary - they conflict.
# engram-lib gates bundled-sqlcipher behind the "sqlcipher" feature so
# engram-migrate (which still uses libsql) compiles without collision.
