[workspace]
resolver = "2"
members = ["engram-lib", "engram-server", "engram-cli", "engram-sidecar", "engram-approval-tui", "engram-mcp", "engram-cred", "engram-credd", "agent-forge", "engram-migrate"]

[workspace.package]
rust-version = "1.94"

[workspace.dependencies]
libsql = "0.6"
rusqlite = "0.31"
tokio-rusqlite = "0.5"
deadpool-sqlite = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.28"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "signal", "fs", "net", "process"] }
tokio-util = { version = "0.7", features = ["rt"] }
axum = { version = "0.8", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "set-header", "compression-gzip", "compression-br", "compression-zstd"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
hmac = "0.12"
sha2 = "0.10"
subtle = "2.5"
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }
tokenizers = "0.22"
ndarray = "0.16"
dirs = "6"
regex = "1"
url = "2"
zip = "2"
pdf-extract = "0.7"
rand = "0.9"
async-trait = "0.1"
arrow-array = "57"
arrow-schema = "57"
futures = "0.3"
notify = "8"
notify-debouncer-mini = "0.6"
lancedb = { version = "0.27", default-features = false }
protoc-bin-vendored-linux-x86_64 = "3"
flate2 = "1"
hex = "0.4.3"
base64 = "0.22"
secrecy = { version = "0.8", features = ["serde"] }
zeroize = { version = "1", features = ["zeroize_derive"] }
mimalloc = { version = "0.1", default-features = false }
lru = "0.12"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false, features = ["http-listener"] }
# Note: Can't use bundled sqlite with libsql in same binary - they conflict.
# engram-lib gates bundled-sqlcipher behind the "sqlcipher" feature so
# engram-migrate (which still uses libsql) compiles without collision.

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
