[package]
name = "agent-forge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agent-forge"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
walkdir = "2"
ignore = "0.4"
thiserror = "1"
dirs = "5"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-python = "0.21"
tree-sitter-go = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-c = "0.21"
tree-sitter-json = "0.21"
