[package]
name = "agent-forge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agent-forge"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { workspace = true }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
walkdir = "2"
ignore = "0.4"
thiserror = "1"
dirs = "5"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-c = "0.23"
tree-sitter-json = "0.23"
