[package]
name = "agent-forge"
version = "1.10.0"
edition = "2021"
rust-version.workspace = true
license = "Elastic-2.0"
description = "Protocol CLI that gates agent coding work behind spec + hypothesis + verification steps"

[features]
# Off by default. Enabling `fluency` compiles in the emission layer: the
# `review` subcommand and the slice documents `checkpoint` writes into
# docs/agent-forge/. A default build gates the protocol without ever writing
# documentation into the caller's repository, so cloning Kleos does not opt
# anyone into committed markdown they did not ask for.
default = []
fluency = []

[lib]
name = "agent_forge"
path = "src/lib.rs"

[[bin]]
name = "agent-forge"
path = "src/main.rs"

[[bin]]
name = "agent-forge-mcp"
path = "src/bin/agent-forge-mcp.rs"
required-features = ["fluency"]

[dependencies]
kleos-token-client = { path = "../kleos-token-client", version = "1.10.0" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { workspace = true }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
walkdir = "2"
ignore = "0.4"
thiserror = "1"
dirs = "5"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-c = "0.23"
tree-sitter-json = "0.23"
reqwest = { workspace = true, features = ["blocking"] }
# POSIX-aware command tokenizer used by verify::run_step to split quoted args.
shlex = "1"

[target.'cfg(windows)'.dependencies]
rusqlite = { workspace = true, features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
