[package]
name = "engram-approval-tui"
version = "0.3.0"
edition = "2021"
rust-version.workspace = true
description = "Terminal UI for human approval workflow"

[[bin]]
name = "engram-approval-tui"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = "0.30"
crossterm = "0.28"
