[package]
name = "engram-cli"
version = "0.1.0"
edition = "2021"
description = "CLI client for Engram -- persistent semantic memory for AI agents"
license = "Elastic-2.0"
repository = "https://github.com/Ghost-Frame/Engram-rust"
homepage = "https://engram.lol"
readme = "../README.md"

[dependencies]
engram-lib = { path = "../engram-lib", version = "0.1.0" }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
rpassword = "7"
