[package]
name = "engram-cred"
version = "0.1.0"
edition = "2021"
description = "Credential management for Engram with YubiKey support"

[[bin]]
name = "cred"
path = "src/bin/cred.rs"

[[bin]]
name = "derive-db-key"
path = "src/bin/derive-db-key.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
rpassword = "7"
anyhow = "1"
shellexpand = "3"
directories = "6"
engram-lib = { path = "../engram-lib" }

# Crypto
aes-gcm = "0.10"
argon2 = "0.5"
sha1 = "0.10"
sha2.workspace = true
hmac.workspace = true
rand.workspace = true
zeroize = { workspace = true }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true

# Database
rusqlite.workspace = true

# Utils
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
hex = "0.4"
base64 = "0.22"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
