[package]
name = "engram-credd"
version = "0.3.1"
edition = "2021"
rust-version.workspace = true
description = "Credential management daemon for Engram"

[lib]
name = "engram_credd"
path = "src/lib.rs"

[[bin]]
name = "engram-credd"
path = "src/main.rs"

[dependencies]
engram-lib = { path = "../engram-lib", features = ["sqlcipher"] }
engram-cred = { path = "../engram-cred" }

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Async
tokio.workspace = true

# HTTP client for proxy
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utils
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
async-trait.workspace = true
rpassword = "7"
anyhow = "1"
hex = "0.4"
subtle = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
reqwest.workspace = true
http-body-util = "0.1"
tower = { workspace = true, features = ["util"] }
hex = "0.4"
