[package]
name = "engram-lib"
version = "0.1.0"
edition = "2021"

[features]
default = []
test-utils = []
# Enable per-tenant sharding (rusqlite-based). Mutually exclusive with libsql tests.
tenant-sharding = []

[dependencies]
libsql = { workspace = true }
rusqlite = { workspace = true, optional = true }
tokio-rusqlite = { workspace = true, optional = true }
deadpool-sqlite = { workspace = true, features = ["tracing"], optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
sha2 = { workspace = true }
ort = { workspace = true }
tokenizers = { workspace = true }
ndarray = { workspace = true }
reqwest = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
zip = { workspace = true }
pdf-extract = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
futures = { workspace = true }
lancedb = { workspace = true }
protoc-bin-vendored-linux-x86_64 = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
