[package]
name = "engram-lib"
version = "0.1.0"
edition = "2021"

[features]
default = ["brain_hopfield"]
brain_hopfield = []
test-utils = []
# Enable per-tenant sharding (rusqlite-based). Mutually exclusive with libsql tests.
tenant-sharding = []
credd-raw = []

[dependencies]
rusqlite = { workspace = true }
tokio-rusqlite = { workspace = true }
deadpool-sqlite = { workspace = true, features = ["tracing"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
url = { workspace = true }
ort = { workspace = true }
tokenizers = { workspace = true }
ndarray = { workspace = true }
reqwest = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
zip = { workspace = true }
pdf-extract = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
futures = { workspace = true }
lancedb = { workspace = true }
protoc-bin-vendored-linux-x86_64 = { workspace = true }
flate2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
axum = { workspace = true }
