[package]
name = "engram-lib"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
description = "Core library for Engram -- persistent semantic memory for AI agents"
license = "Elastic-2.0"
repository = "https://github.com/Ghost-Frame/Engram-rust"
homepage = "https://engram.lol"
readme = "../README.md"

[features]
default = ["brain_hopfield"]
brain_hopfield = []
test-utils = []
# Enable per-tenant sharding (rusqlite-based). Mutually exclusive with libsql tests.
tenant-sharding = []
credd-raw = []
# Vendor SQLCipher for at-rest encryption. Mutually exclusive with libsql
# in the same binary (symbol collision), so engram-migrate must NOT enable this.
sqlcipher = ["rusqlite/bundled-sqlcipher"]
# Bundle SQLite from source (needed on Windows where no system sqlite3.lib exists).
# Mutually exclusive with libsql in the same binary (symbol collision).
bundled-sqlite = ["rusqlite/bundled"]

[dependencies]
rusqlite = { workspace = true }
tokio-rusqlite = { workspace = true }
deadpool-sqlite = { workspace = true, features = ["tracing"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
url = { workspace = true }
ort = { workspace = true }
tokenizers = { workspace = true }
ndarray = { workspace = true }
reqwest = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
zip = { workspace = true }
pdf-extract = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
futures = { workspace = true }
lru = { workspace = true }
lancedb = { workspace = true }
protoc-bin-vendored-linux-x86_64 = { workspace = true }
flate2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
secrecy = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
axum = { workspace = true }
