[package]
name = "engram-mcp"
version = "0.1.0"
edition = "2021"

[features]
default = []
http = ["dep:axum", "dep:tower-http", "dep:subtle"]

[dependencies]
engram-lib = { path = "../engram-lib" }
rusqlite = { workspace = true }
axum = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
subtle = { workspace = true, optional = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true, features = ["util"] }
