[package]
name = "engram-mcp"
version = "0.3.1"
edition = "2021"
rust-version.workspace = true
description = "MCP server for Engram -- Model Context Protocol integration for LLM tools"
license = "Elastic-2.0"
repository = "https://github.com/Ghost-Frame/Engram-rust"
homepage = "https://engram.lol"
readme = "../README.md"

[features]
default = []
http = ["dep:axum", "dep:tower-http", "dep:subtle"]

[dependencies]
engram-lib = { path = "../engram-lib", version = "0.3.1" }
rusqlite = { workspace = true }
axum = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
subtle = { workspace = true, optional = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true, features = ["util"] }
