[package]
name = "engram-migrate"
version = "0.3.1"
edition = "2021"
rust-version.workspace = true
description = "ETL tool to migrate Engram from libsql to rusqlite + LanceDB"

[[bin]]
name = "engram-migrate"
path = "src/main.rs"

[dependencies]
engram-lib = { path = "../engram-lib" }
libsql = { workspace = true }
rusqlite = { workspace = true }
lancedb = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow = "57"
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
indicatif = "0.18"
anyhow = "1"
futures = { workspace = true }
