[package]
name = "engram-server"
version = "0.1.0"
edition = "2021"

[dependencies]
engram-lib = { path = "../engram-lib", features = ["sqlcipher"] }
engram-cred = { path = "../engram-cred" }
axum = { workspace = true, features = ["ws"] }
hmac = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
engram-lib = { path = "../engram-lib", features = ["test-utils"] }
tower = { version = "0.5", features = ["util"] }
tokio = { workspace = true }
