[package]
name = "engram-server"
version = "0.1.0"
edition = "2021"
description = "HTTP server for Engram -- persistent semantic memory for AI agents"
license = "Elastic-2.0"
repository = "https://github.com/Ghost-Frame/Engram-rust"
homepage = "https://engram.lol"
readme = "../README.md"

[dependencies]
engram-lib = { path = "../engram-lib", version = "0.1.0", features = ["sqlcipher"] }
engram-cred = { path = "../engram-cred", version = "0.1.0" }
axum = { workspace = true, features = ["ws"] }
hmac = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
rusqlite = { workspace = true }
secrecy = { workspace = true }

[dev-dependencies]
engram-lib = { path = "../engram-lib", features = ["test-utils"] }
tower = { version = "0.5", features = ["util"] }
tokio = { workspace = true }
