[package]
name = "engram-sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }

# Unix: use engram-lib as-is (system sqlite or libsql)
[target.'cfg(unix)'.dependencies]
engram-lib = { path = "../engram-lib" }

# Windows: bundle sqlite from source (no system sqlite3.lib)
[target.'cfg(windows)'.dependencies]
engram-lib = { path = "../engram-lib", features = ["bundled-sqlite"] }
