[package]
name = "engram-sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
# Sidecar only uses engram-lib for LLM client, but rusqlite still compiles
# so Windows needs bundled-sqlite to avoid missing sqlite3.lib
engram-lib = { path = "../engram-lib" }

[target.'cfg(windows)'.dependencies]
engram-lib = { path = "../engram-lib", features = ["bundled-sqlite"] }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }
