[package]
name = "engram-sidecar"
version = "0.3.1"
edition = "2021"
rust-version.workspace = true

[dependencies]
engram-lib = { path = "../engram-lib" }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
dirs = { workspace = true }
rusqlite = { workspace = true }

# Windows needs bundled SQLCipher since there's no system sqlite3.lib
[target.'cfg(windows)'.dependencies]
engram-lib = { path = "../engram-lib", features = ["sqlcipher"] }
