[package]
name = "forge"
version = "1.8.0"
edition = "2021"
rust-version.workspace = true
license = "Elastic-2.0"
description = "Agent tool runtime -- skill-driven dispatch for Kleos-authenticated tools"

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
kleos-lib = { path = "../kleos-lib", version = "1.8.0" }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
hostname = "0.4"
