[package]
name = "kleos-approval-tui"
version = "0.3.2"
edition = "2021"
rust-version.workspace = true
description = "Terminal UI for human approval workflow"
license = "Elastic-2.0"

[[bin]]
name = "engram-approval-tui"
path = "src/main.rs"

[dependencies]
kleos-lib = { path = "../kleos-lib", version = "0.3.2" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = "0.30"
crossterm = "0.28"
