[package]
name = "kleos-cli"
version = "0.3.2"
edition = "2021"
rust-version.workspace = true
description = "CLI client for Kleos -- persistent semantic memory and cognitive infrastructure for AI agents"
license = "Elastic-2.0"
repository = "https://github.com/Ghost-Frame/Kleos"
homepage = "https://engram.syntheos.dev"
readme = "../README.md"

[[bin]]
name = "kleos-cli"
path = "src/main.rs"

[[bin]]
name = "engram-cli"
path = "src/main.rs"

[dependencies]
kleos-lib = { path = "../kleos-lib", version = "0.3.2" }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
rpassword = "7"

# Windows needs bundled SQLCipher since there's no system sqlite3.lib
[target.'cfg(windows)'.dependencies]
kleos-lib = { path = "../kleos-lib", version = "0.3.2", features = ["sqlcipher"] }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/kleos-cli-{ target }{ archive-suffix }"
bin-dir = "kleos-cli{ binary-ext }"
pkg-fmt = "bin"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/kleos-cli-linux-x64"
[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/kleos-cli-linux-arm64"
[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/kleos-cli-darwin-x64"
[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/kleos-cli-darwin-arm64"
[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/kleos-cli-windows-x64.exe"
