[package]
name = "kleos-client"
version = "1.1.1"
edition = "2021"
rust-version.workspace = true
description = "Shared HTTP client for Kleos with PIV/Ed25519 envelope signing"
license = "Elastic-2.0"
repository = "https://github.com/Ghost-Frame/Kleos"
homepage = "https://kleos.syntheos.dev"
readme = "../README.md"

[dependencies]
kleos-lib = { path = "../kleos-lib", version = "1.1.1", features = ["piv"] }
percent-encoding = "2.3"
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
