[package]
name = "kleos-config"
version = "1.8.0"
edition = "2021"
rust-version.workspace = true
description = "Shared Kleos configuration types and environment resolution, used by both the server (kleos-lib) and the installer so the two never drift"
license = "Elastic-2.0"

[dependencies]
serde = { workspace = true }
secrecy = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
ipnet = { workspace = true }

[dev-dependencies]
serial_test = "3"
