[package]
name = "kleos-credd"
version = "0.3.2"
edition = "2021"
rust-version.workspace = true
description = "Credential management daemon for Kleos"
license = "Elastic-2.0"

[lib]
name = "kleos_credd"
path = "src/lib.rs"

[[bin]]
name = "kleos-credd"
path = "src/main.rs"

[[bin]]
name = "engram-credd"
path = "src/main.rs"

[dependencies]
kleos-lib = { path = "../kleos-lib", version = "0.3.2", features = ["sqlcipher"] }
kleos-cred = { path = "../kleos-cred", version = "0.3.2" }

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Async
tokio.workspace = true

# HTTP client for proxy
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utils
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
async-trait.workspace = true
rpassword = "7"
anyhow = "1"
hex = "0.4"
subtle = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
reqwest.workspace = true
http-body-util = "0.1"
tower = { workspace = true, features = ["util"] }
hex = "0.4"
