[package]
name = "kleos-fs"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
license = "Elastic-2.0"
description = "AST-aware filesystem CLIs for AI agents -- kr (read), kw (write), ke (edit)"

[[bin]]
name = "kr"
path = "src/main.rs"

[[bin]]
name = "kw"
path = "src/main.rs"

[[bin]]
name = "ke"
path = "src/main.rs"

[dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
